--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,10 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Run one-line script
+      run: echo Hello
