--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -16,8 +16,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  schedule:
-    - cron: '30 14 * * 1'
+  # schedule:
+   # - cron: '30 14 * * 1'
 
 jobs:
   analyze:
